--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "bootstrap-icons": "^1.10.5"
+    "bootstrap-icons": "^1.10.5",
+    "html2pdf": "^0.0.11",
+    "puppeteer": "^20.1.2"
   }
 }
